Enhancement: Improve spacer UI with collapsible view and remove PDF functionality

--- a/public/Menu_Builder-V4.html
+++ b/public/Menu_Builder-V4.html
@@ -67,7 +67,6 @@
                     <button class="btn" id="add-section"><i class="fas fa-plus"></i> Add Section</button>
                     <button class="btn" id="add-spacer"><i class="fas fa-arrows-alt-v"></i> Add Spacer</button>
                 </div>
-                <button class="btn btn-primary" id="generate-pdf"><i class="fas fa-file-pdf"></i> Generate PDF</button>
                 <button class="btn btn-primary" id="generate-html"><i class="fas fa-file-code"></i> Generate HTML</button>
                 <div id="status"></div>
             </div>
@@ -75,6 +74,7 @@
                 <h2>Preview</h2>
                 <div id="menu-preview"></div>
                 <div id="progress">Progress: 0%</div>
+                <button class="btn btn-primary" id="print-menu-btn"><i class="fas fa-print"></i> Print Menu</button>
             </div>
         </div>
     </div>
