Fix menu printing issues and improve button labels

--- a/public/Menu_Builder-V4.html
+++ b/public/Menu_Builder-V4.html
@@ -67,7 +67,7 @@
                     <button class="btn" id="add-section"><i class="fas fa-plus"></i> Add Section</button>
                     <button class="btn" id="add-spacer"><i class="fas fa-arrows-alt-v"></i> Add Spacer</button>
                 </div>
-                <button class="btn btn-primary" id="generate-html"><i class="fas fa-file-code"></i> Generate HTML</button>
+                <button class="btn btn-primary" id="generate-html"><i class="fas fa-file-code"></i> Preview in Browser</button>
                 <div id="status"></div>
             </div>
             <div class="preview">
