Added menu duplication functionality and improved user experience with auto-loading menus and unsaved changes detection

--- a/public/Menu_Builder-V4.html
+++ b/public/Menu_Builder-V4.html
@@ -46,7 +46,8 @@
                 <select id="menu-select" class="menu-select">
                     <option value="">Select a menu</option>
                 </select>
-                <button class="btn btn-secondary" id="load-menu"><i class="fas fa-folder-open"></i> Load</button>
+                <button class="btn btn-secondary" id="new-menu"><i class="fas fa-file"></i> New</button>
+                <button class="btn btn-secondary" id="duplicate-menu"><i class="fas fa-copy"></i> Duplicate</button>
                 <button class="btn btn-secondary" id="delete-menu"><i class="fas fa-trash"></i> Delete</button>
             </div>
             <div class="content">
