--- a/public/Menu_Builder-V4.html
+++ b/public/Menu_Builder-V4.html
@@ -3,11 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Builder</title>
+    <title>Menu Builder Pro - Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="menu-builder.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="app-header">
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="/images/menu-builder-logo.png" alt="Menu Builder Pro Logo">
+                    <h1>Menu Builder <span>Pro</span></h1>
+                </a>
+            </div>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#" class="active"><i class="fas fa-pencil-alt"></i> Editor</a></li>
+                    <li><a href="#"><i class="fas fa-th"></i> Templates</a></li>
+                    <li><a href="#"><i class="fas fa-cog"></i> Account Settings</a></li>
+                    <li><a href="#"><i class="fas fa-question-circle"></i> Help</a></li>
+                </ul>
+            </nav>
+            <div class="user-menu">
+                <div class="user-dropdown">
+                    <button class="user-dropdown-toggle">
+                        <div class="user-avatar">
+                            <i class="fas fa-user"></i>
+                        </div>
+                        <span class="user-name">My Account</span>
+                        <i class="fas fa-chevron-down"></i>
+                    </button>
+                    <div class="user-dropdown-menu">
+                        <a href="#"><i class="fas fa-user-circle"></i> Profile</a>
+                        <a href="#"><i class="fas fa-cog"></i> Settings</a>
+                        <a href="#"><i class="fas fa-building"></i> Company Details</a>
+                        <a href="#"><i class="fas fa-credit-card"></i> Subscription</a>
+                        <div class="dropdown-divider"></div>
+                        <a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <div class="container">
         <div class="sidebar">
             <h3>Settings</h3>
@@ -34,6 +73,15 @@
                         <option value="title">Next to Title</option>
                         <option value="none">Don't Show Logo</option>
                     </select>
+                </div>
+                
+                <div class="config-option">
+                    <label for="logo-offset">Horizontal Position:</label>
+                    <div class="size-control">
+                        <input type="range" id="logo-offset-slider" min="0" max="500" step="10" value="0">
+                        <input type="number" id="logo-offset" min="0" max="500" value="0">
+                    </div>
+                    <small>Pixels from left edge (0 = centered)</small>
                 </div>
                 
                 <div class="config-option">
@@ -98,7 +146,12 @@
             </div>
         </div>
         <div class="main-content">
-            <h1>Menu Builder</h1>
+            <div class="page-title">
+                <h1>Menu Builder</h1>
+                <div class="actions">
+                    <button class="btn btn-outline-secondary" id="contact-support"><i class="fas fa-headset"></i> Contact Support</button>
+                </div>
+            </div>
             <div class="menu-management">
                 <input type="text" id="menu-name" class="menu-name-input" placeholder="Menu Name (e.g., Spring Menu)">
                 <button class="btn btn-secondary" id="save-menu"><i class="fas fa-save"></i> Save</button>
@@ -140,5 +193,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="menu-builder.js"></script>
+    <script src="app-header.js"></script>
 </body>
 </html>
