fix: Resolve auth/DB issues preventing user portal load & login

--- a/public/user.html
+++ b/public/user.html
@@ -58,7 +58,7 @@
         </div>
 
         <!-- User Dashboard -->
-        <div id="user-dashboard" class="dashboard" style="display: none;">
+        <div id="user-dashboard" class="dashboard">
             <header class="user-header">
                 <div class="header-left">
                     <h1>User Portal</h1>
