--- a/public/Menu_Builder-V4.html
+++ b/public/Menu_Builder-V4.html
@@ -35,10 +35,10 @@
                         <i class="fas fa-chevron-down"></i>
                     </button>
                     <div class="user-dropdown-menu">
-                        <a href="#"><i class="fas fa-user-circle"></i> Profile</a>
-                        <a href="#"><i class="fas fa-cog"></i> Settings</a>
-                        <a href="#"><i class="fas fa-building"></i> Company Details</a>
-                        <a href="#"><i class="fas fa-credit-card"></i> Subscription</a>
+                        <a href="#" id="profile-link"><i class="fas fa-user-circle"></i> Profile</a>
+                        <a href="#" id="settings-link"><i class="fas fa-cog"></i> Settings</a>
+                        <a href="#" id="company-link"><i class="fas fa-building"></i> Company Details</a>
+                        <a href="#" id="subscription-link"><i class="fas fa-credit-card"></i> Subscription</a>
                         <div class="dropdown-divider"></div>
                         <a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a>
                     </div>
@@ -147,46 +147,46 @@
         </div>
         <div class="main-content">
             <div class="page-title">
-                <h1>Menu Builder</h1>
+        <h1>Menu Builder</h1>
                 <div class="actions">
                     <button class="btn btn-outline-secondary" id="contact-support"><i class="fas fa-headset"></i> Contact Support</button>
                 </div>
             </div>
-            <div class="menu-management">
-                <input type="text" id="menu-name" class="menu-name-input" placeholder="Menu Name (e.g., Spring Menu)">
-                <button class="btn btn-secondary" id="save-menu"><i class="fas fa-save"></i> Save</button>
-                <select id="menu-select" class="menu-select">
-                    <option value="">Select a menu</option>
-                </select>
+        <div class="menu-management">
+            <input type="text" id="menu-name" class="menu-name-input" placeholder="Menu Name (e.g., Spring Menu)">
+            <button class="btn btn-secondary" id="save-menu"><i class="fas fa-save"></i> Save</button>
+            <select id="menu-select" class="menu-select">
+                <option value="">Select a menu</option>
+            </select>
                 <button class="btn btn-secondary" id="new-menu"><i class="fas fa-file"></i> New</button>
                 <button class="btn btn-secondary" id="duplicate-menu"><i class="fas fa-copy"></i> Duplicate</button>
-                <button class="btn btn-secondary" id="delete-menu"><i class="fas fa-trash"></i> Delete</button>
-            </div>
-            <div class="content">
-                <input type="text" id="title" placeholder="Menu Title">
-                <input type="text" id="subtitle" placeholder="Subtitle">
-                <select id="font-select">
-                    <option value="Playfair Display">Playfair Display</option>
-                    <option value="Lato">Lato</option>
-                    <option value="Roboto">Roboto</option>
-                </select>
-                <select id="layout-select" class="layout-select">
-                    <option value="single">Single Column</option>
-                    <option value="split">Two Columns (Split)</option>
-                    <option value="two-per-page">Two Menus per Page</option>
-                </select>
-                <div id="sections"></div>
+            <button class="btn btn-secondary" id="delete-menu"><i class="fas fa-trash"></i> Delete</button>
+        </div>
+        <div class="content">
+            <input type="text" id="title" placeholder="Menu Title">
+            <input type="text" id="subtitle" placeholder="Subtitle">
+            <select id="font-select">
+                <option value="Playfair Display">Playfair Display</option>
+                <option value="Lato">Lato</option>
+                <option value="Roboto">Roboto</option>
+            </select>
+            <select id="layout-select" class="layout-select">
+                <option value="single">Single Column</option>
+                <option value="split">Two Columns (Split)</option>
+                <option value="two-per-page">Two Menus per Page</option>
+            </select>
+            <div id="sections"></div>
                 <div class="button-group">
-                    <button class="btn" id="add-section"><i class="fas fa-plus"></i> Add Section</button>
+            <button class="btn" id="add-section"><i class="fas fa-plus"></i> Add Section</button>
                     <button class="btn" id="add-spacer"><i class="fas fa-arrows-alt-v"></i> Add Spacer</button>
                 </div>
                 <button class="btn btn-primary" id="generate-html"><i class="fas fa-file-code"></i> Preview in Browser</button>
-                <div id="status"></div>
-            </div>
-            <div class="preview">
-                <h2>Preview</h2>
-                <div id="menu-preview"></div>
-                <div id="progress">Progress: 0%</div>
+            <div id="status"></div>
+        </div>
+        <div class="preview">
+            <h2>Preview</h2>
+            <div id="menu-preview"></div>
+            <div id="progress">Progress: 0%</div>
                 <button class="btn btn-primary" id="print-menu-btn"><i class="fas fa-print"></i> Print Menu</button>
             </div>
         </div>
