feat: Add link from admin panel back to user app

--- a/public/admin.html
+++ b/public/admin.html
@@ -39,6 +39,7 @@
                     <li><a href="#plans" class="nav-link" data-section="plans">Subscription Plans</a></li>
                     <li><a href="#content" class="nav-link" data-section="content">Content</a></li>
                     <li><a href="#settings" class="nav-link" data-section="settings">Settings</a></li>
+                    <li><a href="/user.html">Back to User App</a></li>
                 </ul>
             </nav>
 
